--- a/formularioJS/formulario.html
+++ b/formularioJS/formulario.html
@@ -35,13 +35,13 @@
     <input type="checkbox" name="hobby" value="meditar">meditar
     <br>
     <label for="">Pais:(*)</label>
-    <select name="Pais" id="">
+    <select name="Pais" id="pais">
         <option value="">---</option>
-        <option value="">Venezuela</option>
-        <option value="">Brasil</option>
-        <option value="">Argentina</option>
-        <option value="">Uruguay</option>
-        <option value="">Colombia</option>
+        <option value="Venezuela">Venezuela</option>
+        <option value="Brasil">Brasil</option>
+        <option value="Argentina">Argentina</option>
+        <option value="Uruguay">Uruguay</option>
+        <option value="Colombia">Colombia</option>
     </select>
     <br>
     <label for="Sexo">Sexo:(*)</label>
