--- a/restaurant_app/index.html
+++ b/restaurant_app/index.html
@@ -16,6 +16,8 @@
 
     <div class="d-flex mt-4 justify-content-center">
         <button  data-bs-toggle="modal" data-bs-target="#formulario" type="button" class="btn btn-success">Nueva Orden</button>
+
+        <button  data-bs-toggle="modal" data-bs-target="#mesas" type="button" class="btn btn-success ms-5">Mesas</button>
     </div>
 
 
@@ -36,6 +38,33 @@
 
     <!-- Modal -->
         <div class="modal fade" id="formulario">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">Restaurant App</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label class="form-label">Mesa</label>
+                                <input id="mesa" type="number" class="form-control" min="1" max="8">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Hora</label>
+                                <input id="hora" type="time" class="form-control" >
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button id="guardar-cliente" type="button" class="btn btn-primary">Crear Orden</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="mesas">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
